paln botton spacing fix

--- a/style.css
+++ b/style.css
@@ -223,7 +223,9 @@ h4{
 
 .button-plan{
     background-color: #0061FF;
-    margin: 10px;
+    margin-top: 50px;
+    margin-bottom: 10px;
+    margin-left: 10px;
     color: white;
     border: none;
     padding:10px 45px;
@@ -245,7 +247,8 @@ h4{
 
 .buy-now{
     text-align: start;
-    margin-top: 15px;
+    margin-top: 30px;
+    margin-left: 8px
 }
 
 .buy-now a{
@@ -256,7 +259,7 @@ h4{
 
 .hr-plan{
     width: 50px;
-    margin:40px 20px
+    margin:35px 10px
 }
 
 
